--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="home">
-    <div class="layout">
+    <div class="banner">
        <div class="container">
           <h2>We design and bring</h2>
           <h1>Digital Transformation</h1>
@@ -46,59 +46,27 @@
           <div class="button">
              <div class="btn">Get to know us</div>
           </div>
-          <!--<div class="row">
-             <div class="col-md-2 icon">
-               <div class="icon1">
-                  <img src="./assets/images/home/sify.png">
-               </div>
-             </div>
-             <div class="col-md-2 icon">
-               <div class="icon2">
-                  <img src="./assets/images/home/larsen-toubro.png">
-               </div>
-             </div>
-             <div class="col-md-2 icon">
-               <div class="icon3">
-                  <img src="./assets/images/home/world-vision.png">
-               </div>
-             </div>
-             <div class="col-md-2 icon">
-               <div class="icon4">
-                  <img src="./assets/images/home/bigfday.png">
-               </div>
-             </div>
-             <div class="col-md-2 icon">
-               <div class="icon5">
-                  <img src="./assets/images/home/fca.png">
-               </div>
-             </div>
-             <div class="col-md-2 icon">
-               <div class="icon6">
-                  <img src="./assets/images/home/sgv.png">
-               </div>
-             </div>
-          </div>-->
-       </div>
+        </div>
     </div>
     <div class="logo">
       <div class="container">
     <div class="flex">
-      <div class="icon1">
+      <div class="icon">
          <img src="./assets/images/home/logo-1.png">
       </div>
-      <div class="icon2">
+      <div class="icon">
          <img src="./assets/images/home/logo-2.png">
       </div>
-      <div class="icon3">
+      <div class="icon">
          <img src="./assets/images/home/logo-3.png">
       </div>
-      <div class="icon4">
+      <div class="icon">
          <img src="./assets/images/home/logo-4.png">
       </div>
-      <div class="icon5">
+      <div class="icon">
          <img src="./assets/images/home/logo-5.png">
       </div>
-      <div class="icon6">
+      <div class="icon">
          <img src="./assets/images/home/logo-6.png">
       </div>
    </div>
@@ -300,7 +268,7 @@
           <div class="col-md-6 left">
              <h2>MINTify your thoughts with our latest blogs and articles</h2>
              <div class="button">
-                <div class="btn">Read Blog</div>
+                <div class="btn btnn">Read Blog</div>
              </div>
           </div>
           <div class="col-md-6 right">
