--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -160,7 +160,7 @@
             <div class="d-flex">
                 <ul ngbNav #nav2="ngbNav" [(activeId)]="active2" class="nav-pills" orientation="vertical">
                   <li ngbNavItem="enterprise-applications">
-                    <a ngbNavLink>Enterprise Applications</a>
+                    <a ngbNavLink>Enterprise Application</a>
                     <ng-template ngbNavContent>
                       <h2>Enterprise Applications</h2>
                       <p>Prioritizing the road map with the key features involved is the key for designing 
