--- a/src/app/modules/services/components/end-to-end-development/end-to-end-development.component.html
+++ b/src/app/modules/services/components/end-to-end-development/end-to-end-development.component.html
@@ -2,9 +2,10 @@
     <div class="banner">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-12">
                     <div class="banner-content">
                         <h1>End To End Development</h1>
+                        <hr class="line">
                         <p>Designing scalable platform harnessing the technology for business reach to their end users with the better user experience, engagement and adaptablity.</p>
                     </div>
                 </div>
