--- a/src/app/modules/services/components/interface-design/interface-design.component.html
+++ b/src/app/modules/services/components/interface-design/interface-design.component.html
@@ -2,9 +2,10 @@
     <div class="banner">
         <div class="container">
             <div class="row">
-                <div class="col-md-5">
+                <div class="col-md-9">
                     <div class="banner-content">
                         <h1>Interface Design</h1>
+                        <hr class="line">
                         <p>Having interface fluent enough for the user to communicate with the system or product is fundamental necessity.</p>
                     </div>
                 </div>
