--- a/src/app/modules/services/components/ui-development/ui-development.component.html
+++ b/src/app/modules/services/components/ui-development/ui-development.component.html
@@ -2,9 +2,10 @@
     <div class="banner">
         <div class="container">
             <div class="row">
-                <div class="col-md-5">
+                <div class="col-md-9">
                     <div class="banner-content">
                         <h1>UI Development</h1>
+                        <hr class="line"> 
                         <p>The design comes to life when the robust technologies are put in place to bring the best Experience.</p>
                     </div>
                 </div>
