--- a/src/app/modules/services/components/ui-development/ui-development.component.scss
+++ b/src/app/modules/services/components/ui-development/ui-development.component.scss
@@ -4,19 +4,28 @@
 .services{
     padding: 50px 0px;
 .banner{
-    background-image: url('/dev/assets/images/bg.png');
+    // background-image: url('/assets/images/bg.png');
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
     top: -53px;
     height: 770px;
     h1{
-        font-size: 56px;
-        color: #000000;
+        font-size: 96px;
+        color: #C3343C;
+        font-family: Baskerville;
+    }
+    hr.line{
+        border-bottom: 10px solid gray;
+        width: 48%;
+        text-align: left;
+        margin-left: 0;
+        margin-top: -7px;
     }
     p{
-        font-size: 18px;
+        font-size: 24px;
         color: #000000;
+        font-family: Muli;
     }
     .banner-content{
         padding: 300px 0px;
@@ -69,6 +78,7 @@
        padding: 285px 0px;
        h3{
            font-size: 48px;
+           font-family: Baskerville;
        }
        @include media-breakpoint-down(lg){
         padding: 100px 0px;
@@ -102,11 +112,13 @@
     h3{
         font-size: 36px;
         margin-bottom: 30px;
+        font-family: Baskerville;
     }
     p{
         font-size: 18px;
         font-weight: 200;
         margin-top: 40px;
+        font-family: Muli;
     }
     .list{
         padding: 30px;
@@ -114,6 +126,7 @@
             font-size: 20px;
             margin-left: 5px;
             font-weight: 200;
+            font-family: Muli;
         }
     }
     @include media-breakpoint-down(lg){
@@ -200,11 +213,13 @@
     }
     h2{
         font-size: 56px;
+        font-family: Baskerville;
     }
     p{
         font-size: 16px;
         line-height: 30px;
         margin-top: 40px;
+        font-family: Muli;
     }
     .li{
         font-size: 16px;
@@ -285,6 +300,7 @@
     color: #C3343C;
     font-size: 36px;
     font-weight: 600;
+    font-family: Baskerville;
     @include media-breakpoint-down(md){
         font-size: 28px;
     }
@@ -314,20 +330,24 @@
         font-size: 56px;
         font-weight: 500;
         margin-bottom: 30px;
+        font-family: Baskerville;
     }
     p{
         font-size: 16px;
         font-weight: 300;
         margin-bottom: 60px;
+        font-family: Muli;
     }
     .nav-link{
         color: #282829;
+        font-family: Baskerville;
     }
     .nav-pills .nav-link.active, .nav-pills .show > .nav-link{
         background-color: #FFF;
         color: #C3343C;
         font-size: 28px;
-        font-weight: 500;
+        font-weight: 600;
+        font-family: Baskerville;
     }
     @include media-breakpoint-down(lg){
         padding: 100px 0;
