--- a/src/app/modules/services/components/usability-testing/usability-testing.component.html
+++ b/src/app/modules/services/components/usability-testing/usability-testing.component.html
@@ -2,9 +2,10 @@
     <div class="banner">
         <div class="container">
             <div class="row">
-                <div class="col-md-5">
+                <div class="col-md-9">
                     <div class="banner-content">
                         <h1>Usability testing</h1>
+                        <hr class="line">
                         <p>Reduce the risk of usability issues before the product launces into the market</p>
                     </div>
                 </div>
