--- a/src/app/modules/services/components/user-experience/user-experience.component.html
+++ b/src/app/modules/services/components/user-experience/user-experience.component.html
@@ -2,9 +2,10 @@
     <div class="banner">
         <div class="container">
             <div class="row">
-                <div class="col-md-5">
+                <div class="col-md-9">
                     <div class="banner-content">
                         <h1>User Experience</h1>
+                        <hr class="line">
                         <p>Digital Products we use in our daily lives should behave as good as the nicest person we know!</p>
                     </div>
                 </div>
