--- a/src/app/modules/services/components/user-experience/user-experience.component.scss
+++ b/src/app/modules/services/components/user-experience/user-experience.component.scss
@@ -4,22 +4,34 @@
 .services{
     padding: 50px 0px;
 .banner{
-    background-image: url('/dev/assets/images/bg.png');
+    // background-image: url('/assets/images/bg.png');
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
     top: -53px;
     height: 770px;
     h1{
-        font-size: 56px;
-        color: #000000;
+        font-size: 96px;
+        color: #C3343C;
+        font-family: Baskerville;
+    }
+    hr.line{
+        border-bottom: 10px solid gray;
+        width: 60%;
+        text-align: left;
+        margin-left: 0;
+        margin-top: -7px;
     }
     p{
-        font-size: 18px;
+        font-size: 24px;
         color: #000000;
+        font-family: Muli;
     }
     .banner-content{
-        padding: 300px 0px;
+        padding-top: 300px;
+        padding-bottom: 150px;
+        padding-left: 80px;
+        padding-right: 80px;
     }
     @include media-breakpoint-down(lg){
         .row{
@@ -69,6 +81,7 @@
        padding: 285px 0px;
        h3{
            font-size: 48px;
+           font-family: Baskerville;
        }
        @include media-breakpoint-down(lg){
         padding: 100px 0px;
@@ -76,6 +89,7 @@
        @include media-breakpoint-down(md){
         h3{
             font-size: 30px;
+            font-family: Baskerville;
         }
        }
     }
@@ -99,11 +113,14 @@
     h3{
         font-size: 36px;
         margin-bottom: 30px;
+        font-family: Baskerville;
     }
     p{
         font-size: 18px;
         font-weight: 200;
         margin-top: 40px;
+        font-family: Muli;
+        line-height: 40px;
     }
     .list{
         padding: 30px;
@@ -114,6 +131,7 @@
             font-size: 20px;
             margin-left: 20px;
             font-weight: 200;
+            font-family: Muli;
         }
     }
     @include media-breakpoint-down(lg){
@@ -194,11 +212,13 @@
     }
     h2{
         font-size: 56px;
+        font-family: Baskerville;
     }
     p{
         font-size: 16px;
         line-height: 30px;
         margin-top: 40px;
+        font-family: Muli;
     }
     .li{
         font-size: 16px;
@@ -275,6 +295,7 @@
     color: #C3343C;
     font-size: 36px;
     font-weight: 600;
+    font-family: Baskerville;
     svg{
         margin-top: 8px;
     }
@@ -297,6 +318,7 @@
 }
 .nav-pills a{
     color: #282829;
+    font-family: Baskerville;
 }
 // .flex-column{
 //     padding: 75px 0px;
