--- a/src/app/modules/work/components/event-management/event-management.component.html
+++ b/src/app/modules/work/components/event-management/event-management.component.html
@@ -2,32 +2,30 @@
     <div class="banner">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 ordertwo">
+                <div class="col-md-4 ordertwo">
                     <div class="banner-header">
                         <h2>Event Hosting made stressless</h2>
                         <h6>UX <span>. UI .</span><span> Mobile </span><span>. Web .</span><span> B2C</span></h6>
                     </div>
                 </div>
-                <div class="col-md-6 orderone">
+                <div class="col-md-7 orderone">
                     <div class="container">
-                        <img src="./assets/images/works/event2.png">
+                        <img src="./assets/images/works/event banner.png">
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="about-project">
+        <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <div class="container">
                     <h2>About Project</h2>
-                </div>
             </div>
-            <div class="col-md-8">
-                <div class="container">
+            <div class="col-md-7">
                     <p>Marriages and family events are more emotionally connected to people’s lives in India; and the current generation is ready to outsource the events and sit back to enjoy a peaceful event without the hassles of organizing themselves. Connecting the dots between these two segments is the role of the platform.</p>
-                </div>
             </div>
+        </div>
         </div>
     </div>
     <div class="image-event">
@@ -37,8 +35,10 @@
     <div class="approach">
         <div class="container">
             <div class="row">
-                <div class="col-md-9">
+                <div class="col-md-4">
                     <h2>Approach</h2>
+                </div>
+                <div class="col-md-7">
                     <p>Our aim was to make the process more personal and reducing the stress involved while making important decisions</p>
                 </div>
             </div>
@@ -51,7 +51,7 @@
                     <div class="col-md-4">
                         <h6>Target Audience</h6>
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-7">
                         <p>Venue Managers/Owners, Decorators, Photographers, Make-up artists, Stage Performers, Fashion Designers, Individuals Corporates in search of venue or event vendors</p>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                     <div class="col-md-4">
                         <h6>Strategy</h6>
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-7">
                        <p>Helping the user to select the best Venue, Caterer, Photographer, Decorator, etc for their event by providing social proof, reviews from trusted sources, previous works, budget and comparison.</p>
                     </div>
                 </div>
@@ -111,35 +111,48 @@
             </div>
         </div>
     </div>
-    <div class="green-image">
-        <img src="./assets/images/works/healthcare2.png">
+    <div class="image-event">
+        <img src="./assets/images/works/eventmanagement1.png">
+    </div>
+    <div class="image-event">
+        <img src="./assets/images/works/eventmanagement2.png">
+    </div>
+    <div class="image-event">
+        <img src="./assets/images/works/eventmanagement3.png">
     </div>
     <div class="work-description">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <h6>Logo Story</h6>
+                <div class="col-md-8">
+                    <h5>Logo Story</h5>
+                    <h6>Rebranding to match with the vision of the business</h6>
                     <p>Balloons depict celebration, for all kinds of events. Right from Birthdays, Parties, Weddings, etc And because event management is all about gathering at a place to celebrate. Location plays a vital role</p>
                 </div>
-                <div class="col-md-8">
-                    <img src="./assets/images/works/healthcare4.png">
+                <div class="col-md-4">
+                    <img src="./assets/images/works/eventmanagement4.png">
                 </div>
             </div>
         </div>
     </div>
-    <div class="typography-image">
-        <img src="./assets/images/works/healthcare6.png">
+    <div class="image-event">
+        <img src="./assets/images/works/eventmanagement5.png">
+    </div>
+    <div class="event-image">
+        <img src="./assets/images/works/eventmanagement6.png">
+    </div>
+    <div class="event-image">
+        <img src="./assets/images/works/eventmanagement7.png">
     </div>
     <div class="other-case-studies">
         <div class="row">
             <div class="col-md-6 left">
                 <h2>Other Case Studies</h2>
                 <div class="button">
-                    <div class="btn">See All Works <img src="./assets/images/rightarrow-red.svg"></div>
+                    <div class="btn btnn">See All Works</div>
                 </div>
             </div>
             <div class="col-md-6 right">
-                <ngu-carousel class="blog-carousel" #blogCarousel [inputs]="blogsCarouselConfig" [dataSource]="blogs">
+                <ngu-carousel class="blog-carousel" #blogCarousel [inputs]="blogsCarouselConfig" [dataSource]="otherCaseStudies">
                     <ngu-tile *nguCarouselDef="let item; let i = index">
                         <div class="class">
                             <div class="image">
