--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,6 +40,9 @@ body { margin: 0; font-family: 'Inter', sans-serif; }
 .text-right{
     text-align: right;
 }
+.text-left{
+    text-align: left;
+}
 .text-center{
     text-align: center;
 }
