--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -3,16 +3,14 @@
 @import '~bootstrap/scss/mixins';
 
 .home{
-    .layout{
+    .banner{
         background-color: #E2E2E2;
-        background-repeat: no-repeat;
-        background-size: cover;
         position: relative;
-        height: 600px;
+        height: 700px;
+        padding: 245px 0px;
         h2{
             font-size: 48px;
             color: #3B3B3B;
-            padding-top: 200px;
             font-family: Muli;
         }
         h1{
@@ -50,7 +48,6 @@
         .card{
             border: none;
             padding: 100px 170px 5px 100px;
-            //height: 600px;
             h3{
                 font-size: 24px;
                 font-family: Muli;
@@ -69,18 +66,9 @@
                 color: #5A5A5A;
                 margin-bottom: 60px;
             }
-            .btn{
-                border: 2px solid #0D0D0D;
-                border-radius: 0;
-                color: #0D0D0D;
-                cursor: pointer;
-                font-size: 20px;
-                font-family: Muli;
-            }
         }
         .step-image{
             text-align: center;
-            //padding: 80px 0px;
             margin-bottom: -12px;
             margin-left: -70px;
             img{
@@ -91,21 +79,6 @@
         .mt-2, .my-2 {
             margin-top: 0 !important;
         }
-        // .nav{
-        //     width: 51%;
-        // }
-        /*.nav-pills{
-            a{
-                padding: 6px 180px 6px 180px;
-            }
-            .nav-link{
-                border-radius: 0;
-                background-color: #E6E6E6;
-            }
-            .nav-link.active{
-                background-color: #C3343C;
-            }
-        }*/
         @include media-breakpoint-down(lg){
             .card{
                 padding: 100px 10px 100px 50px;
@@ -177,14 +150,6 @@
             color: #6F6F6E;
             margin-bottom: 50px;
         }
-        .btn{
-            border: 2px solid #0D0D0D;
-            border-radius: 0;
-            color: #0D0D0D;
-            cursor: pointer;
-            font-size: 20px;
-            font-family: Muli;
-        }
         .icon{
             text-align: center;
             padding: 120px 0 40px 0;
@@ -252,50 +217,10 @@
      .logo{
          background-color: #E2E2E2;
     .flex{
-        //overflow-y: scroll;
         display: flex;
-        padding: 80px 0px 40px 0px;
-        .icon1{
-            padding: 0 5px 0 0px;
-            position: relative;
-            img{
-                bottom: 0;
-            }
-        }
-        .icon2{
-            padding: 0 0px 0 65px;
-            position: relative;
-            img{
-                bottom: 0;
-            }
-        }
-        .icon3{
-            padding: 0 20px 0 65px;
-            position: relative;
-            img{
-                bottom: 0;
-            }
-        }
-        .icon4{
-            padding: 0 30px 0 65px;
-            position: relative;
-            img{
-                bottom: 0;
-            }
-        }
-        .icon5{
-            padding: 0 40px 0 65px;
-            position: relative;
-            img{
-                bottom: 0;
-            }
-        }
-        .icon6{
-            padding: 0 50px 0 65px;
-            position: relative;
-            img{
-                bottom: 0;
-            }
+        padding: 50px 0px;
+        .icon{
+            padding-right: 85px;
         }
     }
     @include media-breakpoint-down(lg){
@@ -332,14 +257,6 @@
         }
         .left{
             margin-left: -100px;
-        }
-        .btn{
-            border: 2px solid #0D0D0D;
-            border-radius: 0;
-            color: #0D0D0D;
-            cursor: pointer;
-            font-size: 20px;
-            font-family: Muli;
         }
         h4{
             font-size: 18px;
@@ -446,15 +363,6 @@
                margin-top: 120px;
                margin-bottom: 80px;
            }
-           .btn{
-               background-color: #C3343C;
-            //border: 2px solid #0D0D0D;
-            border-radius: 0;
-            color: #FCFCFC;
-            cursor: pointer;
-            font-size: 20px;
-            font-family: Muli;
-        }
        }
        .right{
            .class{
@@ -635,4 +543,30 @@
 ::ng-deep .tile{
     border-radius: 15px;
     box-shadow: none !important;
+}
+.btn{
+    border: 2px solid #0D0D0D;
+    border-radius: 0;
+    color: #0D0D0D;
+    cursor: pointer;
+    font-size: 20px;
+    font-family: Muli;
+    &:hover{
+        background-color: #C3343C;
+        color: #FFFFFF;
+        border: 2px solid #FFFFFF;
+    }
+}
+.btnn{
+    border: 2px solid #0D0D0D;
+    border-radius: 0;
+    color: #0D0D0D;
+    cursor: pointer;
+    font-size: 20px;
+    font-family: Muli;
+    &:hover{
+        background-color: #C3343C;
+        color: #FFFFFF;
+        border: 2px solid #E2E2E2;
+    }
 }
