--- a/src/app/modules/services/components/usability-testing/usability-testing.component.scss
+++ b/src/app/modules/services/components/usability-testing/usability-testing.component.scss
@@ -7,22 +7,34 @@
         display: none;
     }
 .banner{
-    background-image: url('/dev/assets/images/bg.png');
+    // background-image: url('/assets/images/bg.png');
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
     top: -53px;
     height: 770px;
     h1{
-        font-size: 56px;
-        color: #000000;
+        font-size: 96px;
+        color: #C3343C;
+        font-family: Baskerville;
+    }
+    hr.line{
+        border-bottom: 10px solid gray;
+        width: 63%;
+        text-align: left;
+        margin-left: 0;
+        margin-top: -7px;
     }
     p{
-        font-size: 18px;
+        font-size: 24px;
         color: #000000;
+        font-family: Muli;
     }
     .banner-content{
-        padding: 300px 0px;
+        padding-top: 300px;
+        padding-bottom: 150px;
+        padding-left: 80px;
+        padding-right: 80px;
     }
     @include media-breakpoint-down(lg){
         .row{
@@ -75,6 +87,7 @@
        padding: 285px 0px;
        h3{
            font-size: 48px;
+           font-family: Baskerville;
        }
        @include media-breakpoint-down(lg){
         padding: 100px 0px;
@@ -82,6 +95,7 @@
        @include media-breakpoint-down(md){
         h3{
             font-size: 30px;
+            font-family: Baskerville;
         }
        }
     }
@@ -105,11 +119,14 @@
     h3{
         font-size: 36px;
         margin-bottom: 30px;
+        font-family: Baskerville;
     }
     p{
         font-size: 18px;
         font-weight: 200;
         margin-top: 40px;
+        font-family: Muli;
+        line-height: 40px;
     }
     .list{
         padding: 30px;
@@ -117,6 +134,7 @@
             font-size: 20px;
             margin-left: 5px;
             font-weight: 200;
+            font-family: Muli;
         }
     }
 
@@ -199,11 +217,13 @@
     }
     h2{
         font-size: 56px;
+        font-family: Baskerville;
     }
     p{
         font-size: 16px;
         line-height: 30px;
         margin-top: 40px;
+        font-family: Muli;
     }
     .li{
         font-size: 16px;
@@ -280,6 +300,7 @@
     color: #C3343C;
     font-size: 36px;
     font-weight: 600;
+    font-family: Baskerville;
     svg{
         margin-top: 14px !important;
     }
@@ -302,6 +323,7 @@
 }
 .nav-pills a{
     color: #282829;
+    font-family: Baskerville;
 }
 // .flex-column{
 //     padding: 75px 0px;
@@ -317,6 +339,7 @@
         padding-top: 60px;
         margin-bottom: 20px;
         line-height: 60px;
+        font-family: Baskerville;
     }
     .layout{
     .flex{
@@ -332,6 +355,7 @@
           margin-left: 8%;
            p{
                font-size: 16px;
+               font-family: Muli;
            }
        }
     }
@@ -403,6 +427,8 @@
     color: #FFF;
     h2{
         font-size: 36px;
+        font-family: Baskerville;
+        padding: 0px 45px;
     }
     .nav-link{
         display: flex;
@@ -465,5 +491,7 @@
         }
     }
 }
-
+::ng-deep .tab-content > .active{
+    font-family: Muli;
+}
 
