--- a/src/app/modules/work/components/networking/networking.component.html
+++ b/src/app/modules/work/components/networking/networking.component.html
@@ -17,14 +17,12 @@
         </div>
     </div>
     <div class="about-project">
+        <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <div class="container">
                     <h2>About Project</h2>
-                </div>
             </div>
             <div class="col-md-8">
-                <div class="container">
                     <p>We were approached with redesign of their legacy system that required change in process from the ground-up. The portal was intertwined with multiple other platforms that was feeding inputs to the UI. It was a challenge to break down the functionalities into atomic structures to ensure ease of use and reusability for the UI Development.</p>
                 </div>
             </div>
@@ -36,8 +34,10 @@
     <div class="approach">
         <div class="container">
             <div class="row">
-                <div class="col-md-9">
+                <div class="col-md-4">
                     <h2>Approach</h2>
+                </div>
+                <div class="col-md-8">
                     <p>Our aim was to create an Easily adaptable portal, with instant access to Products & Services; with least to none redundant tasks</p>
                 </div>
             </div>
@@ -72,6 +72,7 @@
         <div class="container">
         <div class="row">
             <div class="col-md-4">
+                <h1>23+</h1>
                 <h2>Users Interviewed</h2>
             </div>
             <div class="col-md-8">
@@ -108,35 +109,53 @@
             </div>
         </div>
     </div>
-    <div class="green-image">
-        <img src="./assets/images/works/healthcare2.png">
+    <div class="typography-image">
+        <img src="./assets/images/works/sify1.png">
+    </div> 
+    <div class="typography-image">
+        <img src="./assets/images/works/sify2.png">
+    </div> 
+    <div class="sify-image">
+        <img src="./assets/images/works/sify3.png">
     </div>
-    <div class="work-description">
+    <div class="research">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-5">
                     <h6>Creating a Design System</h6>
                     <p>Making a design system to adapt to different devices, scalable services, Upcoming products and consistency throughout the visual language.</p>
                 </div>
-                <div class="col-md-8">
-                    <img src="./assets/images/works/net3.png">
+            </div>
+        </div>
+    </div>
+     <div class="typography-image">
+        <img src="./assets/images/works/sify4.png">
+    </div>
+    <div class="design-system">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <p>A Design system that would cater to both pre and post login scenarios,  Mobile and laptop devices, established and upcoming services/products.</p>
                 </div>
             </div>
         </div>
     </div>
     <div class="typography-image">
-        <img src="./assets/images/works/net2.png">
+        <img src="./assets/images/works/sify9.png">
+    </div>
+    <div class="typography-image">
+        <img src="./assets/images/works/sify6.png">
     </div>
     <div class="other-case-studies">
         <div class="row">
             <div class="col-md-6 left">
                 <h2>Other Case Studies</h2>
                 <div class="button">
-                    <div class="btn">See All Works <img src="./assets/images/rightarrow-red.svg"></div>
+                    <div class="btn btnn">See All Works</div>
                 </div>
             </div>
             <div class="col-md-6 right">
-                <ngu-carousel class="blog-carousel" #blogCarousel [inputs]="blogsCarouselConfig" [dataSource]="blogs">
+                <ngu-carousel class="blog-carousel" #blogCarousel [inputs]="blogsCarouselConfig" [dataSource]="otherCaseStudies">
                     <ngu-tile *nguCarouselDef="let item; let i = index">
                         <div class="class">
                             <div class="image">
